# watch

./: CMakeLists.txt  getopt.c  getopt.h  watch.c
pdcurses/: curses.h
